--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-jest": "^29.7.0",
     "eslint-plugin-require-explicit-generics": "^0.4.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "highcharts": "^11.1.0",
     "husky": "^8.0.3",
     "i18next": "^23.5.1",
     "identity-obj-proxy": "^3.0.0",
@@ -32,6 +33,7 @@
     "next-i18next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "redux-persist": "^6.0.0",
