--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-require-explicit-generics": "^0.4.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.1",
     "husky": "^8.0.3",
     "i18next": "^23.5.1",
     "identity-obj-proxy": "^3.0.0",
@@ -32,6 +33,7 @@
     "next": "13.5.4",
     "next-i18next": "^14.0.3",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
